Add two activities to go from MainActivity
- Each activity shows respective title in the toolbar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyTextRecognitionApp</string>
+    <string name="button_single_image">이미지 한 장 인식 데모</string>
+    <string name="button_stream_image">이미지 스트림 데모</string>
 </resources>
