--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,5 @@
 <resources>
     <string name="app_name">MyTextRecognitionApp</string>
-    <string name="button_single_image">이미지 한 장 인식 데모</string>
-    <string name="button_stream_image">이미지 스트림 데모</string>
-    <string name="stream_result_v1">V1 Result: %1$s</string>
-    <string name="stream_result_v2">V2 Result: %1$s</string>
-
+    <string name="text_recognition_result">Text Recognition Result:\n%1$s</string>
     <string name="permission_message_camera">카메라 사용허가가 필요합니다.</string>
 </resources>
